2014-09-12  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (%-xmega.exe): Fix command to build avrtest-xmega.exe.

2014-09-08  Georg-Johann Lay  <avr@gjlay.de>

	Support -e ADDRESS to set program entry point.

	* avrtest.c (parse_args) [cpu_PC]: Set according to...
	[-e ADDRESS]: ...this new command line option.
	(usage): Document it.
	(execute) [cpu_PC]: Don't set to 0.

2014-09-08  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (exit-xmega): Depend on exit-atxmega128a1.o.

2014-09-08  Georg-Johann Lay  <avr@gjlay.de>

	* gen-flag-tables.c (table_add): Print values as hex.
	* flag-tables.c: Regenerate.

2012-12-15  Georg-Johann Lay  <avr@gjlay.de>

	Don't build XMEGA stuff per default.

	* Makefile: Use .exe executable suffix if build OS is windows.
	(all): Only depend on: avrtest, exit.
	(all-xmega, exit-xmega, clean-exit, exit): New rules.
	README: Explain how to use other avr-gcc and build XMEGA stuff.

2012-06-04  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c: Be more resolute with inlining.

2012-06-04  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile: Add rules to build Win32 executables.

2012-06-04  Georg-Johann Lay  <avr@gjlay.de>

	* README: Update new repositiry URL and avrtest-xmega description.

2012-06-04  Georg-Johann Lay  <avr@gjlay.de>

	* flag-tables.c: New generated file.
	* avrtest.c: Include it. Include sreg.h.
	(main): Don't call init_flag_update_tables.
	(flag_update_table_add8): Remove.
	(flag_update_table_sub8): Remove.
	(flag_update_table_ror8): Remove.
	(flag_update_table_inc): Remove.
	(flag_update_table_dec): Remove.
	(flag_update_table_logical): Remove.
	(FUT_ADD8_RES): Move to...
	(FUT_ADD8_V2_80): Move to...
	(FUT_ADD8_V1_80): Move to...
	(FUT_ADD8_V2_08): Move to...
	(FUT_ADD8_V1_08): Move to...
	(FUT_SUB8_RES): Move to...
	(FUT_SUB8_V2_80): Move to...
	(FUT_SUB8_V1_80): Move to...
	(FUT_SUB8_V2_08): Move to...
	(FUT_SUB8_V1_08): Move to...
	(update_zns_flags): Move to...
	(init_flag_update_tables): Move to...
